# Quake3e-HD

./: .gitignore  CLAUDE.md  CMakeLists.txt  CVAR_CONFLICT_RESOLUTION.md  FULLSCREEN_CVAR_GUIDE.md  FULLSCREEN_WINDOWED_FIX.md  MATERIAL_CVARS.md  Makefile  PHASE_3_INTEGRATION.md  README.md  RENDERER_CVARS.md  RENDERER_IMPLEMENTATION_STATUS.md  RENDERER_STATUS_REPORT.md  RTX_IMPLEMENTATION_PLAN.md  SHADOW_AND_LIGHTING_TEST.md  ULTRAWIDE_CVARS.md  ULTRA_QUALITY_APPLIED.md  apply_ultra_quality.bat  build.bat  cleanup_opengl.py  compile_glsl_shaders.bat  debug_test.bat  enable_pbr_materials.cfg  enable_ssr.cfg  launch_game.bat  launch_ultra.bat  plan.md  run_debug.bat  run_windowed.bat  test_advanced_shadows.cfg  test_all_shadows.cfg  test_debug.bat  test_materials.bat  test_pathtracing.cfg  test_rtx.cfg  test_shadows.cfg  test_types.c  ultra_settings.cfg  upgrade_plan_simple.md
baseq3/: autoexec.cfg  dev_test.cfg  q3config.cfg  test_binds.cfg
baseq3/shaders/: portal.shader
baseq3/shaders/compute/: gpu_culling.spv  taa_resolve.spv  taa_sharpen.spv
baseq3/shaders/glsl/: blend.frag.spv  blend_frag.spv  bloom.frag.spv  bloom_frag.spv  blur.frag.spv  blur_frag.spv  color.frag.spv  color.vert.spv  color_frag.spv  color_vert.spv  dot.frag.spv  dot.vert.spv  dot_frag.spv  dot_vert.spv  fog.frag.spv  fog.vert.spv  fog_frag.spv  fog_vert.spv  gamma.frag.spv  gamma.vert.spv  gamma_frag.spv  gamma_vert.spv
baseq3/shaders/rtx/: closesthit.spv  miss.spv  raygen.spv
config/: q3config.cfg  ultra_settings.cfg
dev-docs/: PHASES_6-10_SUMMARY.md  PHASE_1.md  PHASE_1_INTEGRATION.md  PHASE_2.md  PHASE_2_INTEGRATION.md  PHASE_3.md  PHASE_4.md  PHASE_5.md  PHASE_6.md  corner_grit.md  render_system.md
src/engine/ai/: ai_interface.c
src/engine/ai/behavior/: ai_char.c  ai_chat.c  ai_ea.c  ai_gen.c  ai_goal.c  ai_move.c  ai_weap.c  ai_weight.c
src/engine/ai/navigation/: aas_bspq3.c  aas_cluster.c  aas_debug.c  aas_def.h  aas_entity.c  aas_file.c  aas_funcs.h  aas_main.c  aas_move.c  aas_optimize.c  aas_reach.c  aas_route.c  aas_routealt.c  aas_sample.c
src/engine/ai/util/: crc.c  libvar.c  log.c  memory.c  precomp.c  script.c  struct.c
src/engine/audio/: snd_dma.c  snd_local.h  snd_main.c  snd_mem.c  snd_mix.c
src/engine/audio/codecs/: snd_adpcm.c  snd_codec.c  snd_codec.h  snd_codec_ogg.c  snd_codec_wav.c  snd_wavelet.c
src/engine/collision/: cm_local.h  cm_public.h
src/engine/common/: q_shared.h  qfiles.h  surfaceflags.h
src/engine/common/compression/: huffman.c  huffman_static.c  puff.h
src/engine/common/crypto/: md4.c  md5.c
src/engine/common/math/: q_math.c
src/engine/core/: cmd.c  common.c  cvar.c  history.c  keys.c  qcommon.h
src/engine/filesystem/: files.c  unzip.c
src/engine/network/: msg.c  net_chan.c  net_ip.c
src/engine/renderer/: tr_backend.c  tr_cmdbuf.c  tr_cmdbuf.h  tr_cmds.c  tr_common.h  tr_globals.c  tr_init.c  tr_local.h  tr_main.c  tr_noise.c  tr_public.h  tr_scene.c  tr_scene.h  tr_ultrawide.c  tr_ultrawide.h
src/engine/renderer/advanced/: tr_bindless.c  tr_bindless.h  tr_gpu_driven.c  tr_gpu_driven.h  tr_mesh_shading.c  tr_mesh_shading.h  tr_vrs.c  tr_vrs.h
src/engine/renderer/effects/: tr_marks.c  tr_ultrawide.c  tr_ultrawide.h
src/engine/renderer/geometry/: tr_animation.c  tr_curve.c  tr_mesh.c  tr_noise.c  tr_surface.c
src/engine/renderer/images/: tr_image.c  tr_image_bmp.c  tr_image_jpg.c  tr_image_pcx.c  tr_image_png.c  tr_image_tga.c
src/engine/renderer/lighting/: tr_interaction.c  tr_interaction.h  tr_light.c  tr_light.h  tr_light_backend.c  tr_light_create.c  tr_light_cull.c  tr_light_cvars.c  tr_light_debug.c  tr_light_dynamic.h  tr_light_grid.c  tr_light_mgmt.c  tr_light_scissor.c  tr_light_scissor.h  tr_light_scissor_enhanced.c  tr_shadows.c
src/engine/renderer/materials/: tr_expression.c  tr_material.c  tr_material.h  tr_material_opt.c  tr_material_override.c  tr_material_override.h  tr_material_override_cmds.c  tr_shader_compat.c
src/engine/renderer/memory/: tr_frame_memory.c  tr_frame_memory.h
src/engine/renderer/models/: tr_model.c  tr_model_iqm.c
src/engine/renderer/optimization/: tr_optimize.c  tr_optimize.h  tr_parallel.c  tr_parallel.h  tr_performance.c  tr_performance.h  tr_query.c  tr_query.h  tr_simd.c  tr_simd.h
src/engine/renderer/pathtracing/: rt_debug_output.c  rt_pathtracer.c  rt_pathtracer.h  rt_rtx.c  rt_rtx.h  rt_rtx_denoiser.c  rt_rtx_dlss.c  rt_rtx_impl.c  rt_rtx_material.c  rt_rtx_pipeline.c  rt_screen_dispatch.c
src/engine/renderer/postprocessing/: tr_hdr.c  tr_hdr.h  tr_postprocess.c  tr_postprocess.h  tr_ssr.c  tr_ssr.h  tr_taa.c  tr_taa.h  tr_taa_pipeline.c  tr_volumetric.c  tr_volumetric.h
src/engine/renderer/scene/: tr_portal.c  tr_portal.h  tr_portal_integration.c  tr_scene.c  tr_scene_graph.c  tr_scene_graph.h  tr_scene_utils.c  tr_spatial_tree.c
src/engine/renderer/shaders/: light_frag.glsl  light_vert.glsl
src/engine/renderer/shading/: tr_shade.c  tr_shade_calc.c  tr_shader.c
src/engine/renderer/shadows/: tr_shadow_volume.c  tr_shadow_volume.h  tr_stencil_shadow.c  tr_stencil_shadow.h
src/engine/renderer/sorting/: tr_sort.c
src/engine/renderer/text/: tr_font.c
src/engine/renderer/threading/: tr_backend_thread.c  tr_sync.c
src/engine/renderer/vulkan/: vk.c  vk.h  vk_additive_light.c  (+12 more)
src/engine/vm/: vm_local.h  vm_x86.c
src/game/client/: cgame_interface.c  cl_main.c  client.h  ui_interface.c
src/game/server/: server.h  sv_bot.c  sv_client.c  sv_game.c
src/game/shared/: bg_portal.c
src/platform/sdl/: sdl_gamma.c  sdl_glimp.c  sdl_input.c  sdl_snd.c
src/platform/unix/: linux_glimp.c  linux_joystick.c  linux_qgl.c  linux_qvk.c  linux_signals.c  unix_main.c  x11_dga.c  x11_randr.c  x11_vidmode.c
src/platform/windows/: win_gamma.c  win_glimp.c  win_input.c  win_main.c  win_minimize.c  win_qgl.c  win_qvk.c  win_resource.rc  win_shared.c  win_snd.c  win_syscon.c  win_wndproc.c
src/project/msvc2005/: quake3e.sln
src/project/msvc2017/: libjpeg.vcxproj  libogg.vcxproj  libvorbis.vcxproj  quake3e-ded.vcxproj  quake3e.sln  quake3e.vcxproj  quake3e.vcxproj.filters
(+36 files in other folders)
